--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -11,6 +11,7 @@
   <input type="hidden" id="container-shown-{{ container.id }}" value="true">
   <input type="hidden" id="container-search-{{ container.id }}" value="{{ container.search }}">
   <input type="hidden" id="container-match-{{ container.id }}" value="true">
+  <input type="hidden" id="container-isshown-{{ container.id }}" value="true">
   <div class="card-header bg-secondary bg-opacity-75 border-bottom border-warning border-1 border-opacity-50" id="click-containerhead-{{ container.id }}">
     <h5 class="card-title fw-bold" >{{ container.friendly_name }}</h5>
   </div>
