--- a/kooplexhub/project/templates/project_partial_list.html
+++ b/kooplexhub/project/templates/project_partial_list.html
@@ -6,8 +6,8 @@
 <div class="card bg-light rounded rounded-pill mb-3" id="card-{{ project.id }}">
   <input type="hidden" id="project-hidden-{{ project.id }}" value="{{ hidden }}">
   <input type="hidden" id="project-search-{{ project.id }}" value="{{ project.search }}">
-  <input type="hidden" id="project-match-{{ project.id }}" value="true">
-  <input type="hidden" id="project-isshown-{{ project.id }}" value="true">
+  <input type="hidden" id="project-match-{{ project.id }}" value=true>
+  <input type="hidden" id="project-isshown-{{ project.id }}" value=true>
   <div class="card-header">
     <div class="row">
       <div class="col-4"> {# FIXME: fine tune column width based on spect ratio/device size #}
