--- a/kooplexhub/container/templates/container_configure.html
+++ b/kooplexhub/container/templates/container_configure.html
@@ -1,8 +1,9 @@
 {% extends "container_layout.html" %}
+{% load container_buttons %}
 {% load render_table from django_tables2 %}
 {% load extras %}
 
-{% block child_head %}
+{% block head_content %}
 <!-- bootstrap-toggler requirement -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
 {% endblock %}
@@ -45,6 +46,9 @@
       <a class="nav-link {% if active == "versioncontrol" %}active{% endif %}" id="tab-versioncontrol" data-bs-toggle="tab" href="#versioncontrol" role="tab" aria-controls="versioncontrol" aria-selected="{% if active == "versioncontrol" %}true{% else %}false{% endif %}">Version control</a>
     </li>
 {% endif %}
+    <li class="nav-item {% if active == "delete" %}active{% endif %}" role="presentation" aria-selected="{% if active == "delete" %}true{% else %}false{% endif %}">
+      <a class="nav-link mytab text-danger" id="tab-delete" data-bs-toggle="tab" href="#delete" role="tab" aria-controls="delete" aria-selected="false">Delete</a>
+    </li>
   </ul>
 
   <div class="tab-content" id="serviceConfigTabContent">
@@ -104,16 +108,26 @@
       {% render_table t_repositories %}
     </div>
 {% endif %}
+    <div class="tab-pane fade {% if active == "delete" %}show active{% endif %}" id="delete" role="tabpanel" aria-labelledby="tab-delete">
+      <p>Delete your container by clicking the dustbin...</p>
+      {% button_delete_container container %}
+    </div>
   </div>
 
 </form>
 </div>
+</div>
+{% endblock %}
 
+
+{% block scripts %}
 <script>
 $("#serviceConfigTabs li a").on("click", function () {
   var tab = $( this ).attr("id").split('-')[1]
   console.log( tab )
-  $.cookie("configure_env_tab", tab, { 'path': '/', 'secure': true });
+  if (tab != "delete") {
+    $.cookie("configure_env_tab", tab, { 'path': '/;SameSite=Strict', 'secure': true });
+  }
 });
 $("select[name='image'").change(function() {
     $( "select option:selected" ).each(function() {
@@ -128,9 +142,6 @@ $("select[name='image'").change(function() {
     });
 }).change();
 </script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
-
-</div>
 {% endblock %}
 
